# depth

./: README.md  pyproject.toml
config/: config.yaml  config_eval.yaml
src/: main.py
src/applications/: cam_inference.py  fmv_inference.py  img_inference.py
src/dataset/: nyu_dataloader.py  preprocess.py
src/depth_anything/util/: transform.py
src/depth_anything_v2/dinov2_layers/: attention.py
src/eval/: eval.py  metrics.py
src/eval/result/: eval_nyu_224.json  eval_nyu_518.json
src/model/: inference.py  loader.py
src/optim/: convert_fp16.py
src/profiling/: profiler.py  profiler_viz.py
src/profiling/result/: profile_output.json
src/utils/: config.py  image_processing.py  visualization.py
weights/: download.sh
